# swr

./: Cargo.toml  README.md
.github/workflows/: code-quality.yml  test.yml
examples/: complex-key.rs  search.rs  simple.rs  smol.rs
src/: error.rs  fetcher.rs  hook.rs  lib.rs  options.rs  result.rs  revalidate.rs  runtime.rs  tests.rs  util.rs
src/cache/: entry.rs  mod.rs  slot.rs
src/hook/: egui.rs
src/runtime/: null.rs  smol.rs  tokio.rs
